Chore: 초기 구조 설정

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>MANDA-VANILLA</title>
   </head>
   <body>
+    <!-- 루트 컨테이너, 안의 내용을 자바스크립트로 갈아끼우는 방식 / SPA -->
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
